# PickUp

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  load_env.py  make_celery.py  manage.py  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 05323a1c7eb9_.py  059d67022893_.py  1323466d1bea_.py  1c4d4b0ac40e_.py  21a6a372756e_.py  22828a5d579a_.py  2f1f10d1a34b_.py  4a51e09115aa_.py  51b4e3df0d27_.py  5b9d249f5da7_initial.py  620149e36c74_.py  7f48045cdd69_.py  8864d6f3fe1e_.py  987c4414638f_.py  a3d970fe8345_.py  a9b40e9a2fd2_add_anniversary.py  b6d9b4bf53e2_.py  cd3bd9d39409_initial.py  d546722ea3d1_.py  d7850afd9a3a_.py  dc3d107e1c82_.py  ec2832b6e928_.py  efd1f13c7e1c_alter_users.py  fcdc95cb57da_initial.py
app/: __init__.py  celery.py  constant.py  main.py
app/config/: __init__.py  logging.ini  setting_config.py
app/core/: __init__.py  app_code.py  dependencies.py  exception.py  http_handler.py  loggers.py  middleware.py  register.py  types.py
app/database/: __init__.py  db.py  redis_client.py
app/ext/: auth.py  crypt.py  jwt.py  limiter.py  perms.py
app/middlewares/: jwt_auth.py
app/models/: __init__.py  _mixin.py  action.py  anniversary.py  base.py  comment.py  data.py  invite.py  module.py  notification.py  relationship.py  sys.py  tags.py  user.py
app/repo/: __init__.py  anniversary.py  base.py  data.py  interaction.py  invite.py  media.py  notification.py  relationship.py  tags.py  user.py
app/routers/: __init__.py
app/schemas/: action.py  anniversary.py  common.py  data.py  field.py  invite.py  notification.py  relationship.py  sys.py  user.py
app/services/: anniversary.py  auth.py  data.py  tags.py  (+8 more)
deployment/: deploy-docker.sh  deploy-docker.test.sh  nginx.conf
docs/: EMAIL_SIGNUP.md  init.sql
scripts/: db-migrate.sh
(+32 files in other folders)
